app/assets/stylesheets/pages/_dashboard.scss
.some-class {
  display: block;
  margin: 0 auto;
  fill: #3498db;
  width: 5em;
  height: 5em;
}


.qr-container {
    background-size: 20px 30px;
}

.avatar-card {
 overflow: hidden;
 background: white;
 box-shadow: 0 0 3px rgba(0,0,0,0.1);
 border-radius: 0 0 10px 10px;
}

.card-trip {
  overflow: hidden;
  background: white;
  box-shadow: 0 0 6px rgba(0,0,0,0.2);
  margin: 30px;

}

.card-trip > img {
  height: 200px;
  width: 100%;
  object-fit: cover;
}

.card-trip h2 {
  font-size: 16px;
  font-weight: bold;
  margin: 0;
}

.card-trip p {
  font-size: 12px;
  opacity: .7;
  margin: 0;
}

.card-trip .card-trip-infos {
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  position: relative;

}

.card-trip-infos .card-trip-user {
  position: absolute;
  right: 16px;
  top: -20px;
  width: 40px;
}

.popup-me {
  position: fixed;
  bottom: 0;
  right: 0;
}

h2 {
  color:black;
}

#button {
  position: fixed;
  right: 20px;
  bottom: 20px;
}

.align-items-lg-stretch {
  padding: 0px;
  font-size: 1em;
}

body {
  background-color: $light-gray !important;
}

#avatar-bordered {
  width: 80px;
  border-radius: 80%;
  text-align:center;
}

.name-user {
  text-align:center;
  padding-top: 10px;
}

#avatar-box {
  justify-content: center;
  align-items: center;
}

.shop-info  {
  text-align: center;
  padding: 0;
  margin: 0 auto;
}

.shop-info p {
  margin-top: -15px;
}

.shop-info h2 {
  margin-bottom: 20px;
}

.shop-info h3 {
  margin-bottom: 20px;
}

.btn {
    display: inline-block;
    font-weight: 700;
    color: white;
    text-align: center;
    vertical-align: middle;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 5px;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

#btn-delete {
  background-color: $red;
  margin: 5px 5px 0 5px;
  a {
    color: white;
  }
}

#btn-edit {
  background-color: $yellow;
  margin: 5px 5px 0 5px;
  a {
    color: white;
  }
}

#btn-add {
  background-color: $green;
  margin: 5px 5px 0 5px;
  a {
    color: white;
  }
}

.btn-container {
  display: flex;
  justify-content: center;
}

.shop-container {
  width: 350px;
  margin: 0 auto;
 box-shadow: 0 0 3px rgba(0,0,0,0.1);
}

.promo-container {
  display: flex;
  width: 350px;
  margin: 0 auto;
  justify-content: center;
  align-items: center;
}

.cards-container-dashboard a {
  color: black !important;
  text-decoration: none;
}

#cards {
  padding-top: 15px;
}

#cards-ajax {
  padding-top: 18px;
}

a {
  text-decoration: none !important;
}

.promo-info a {
  color: black !important ;
}

